# retinadeepai-platform

./: .gitignore
retinadeepai-frontend/: README.md  package-lock.json  package.json
retinadeepai-frontend/src/: App.vue  main.ts
retinadeepai-frontend/src/components/pages/: HeaderPanel.vue  ResearchCard.vue  SidebarNavigation.vue
retinadeepai-frontend/src/router/: index.ts
retinadeepai-frontend/src/stores/: toast.ts  user.ts
retinadeepai-frontend/src/views/: HomeView.vue
retinadeepai-frontend/src/views/Auth/: LoginView.vue  ResetPasswordView.vue  SignupView.vue
retinadeepai-frontend/src/views/Pages/: HandbookPageView.vue  MainPageView.vue  MakeResearchPageView.vue  ProfilePageView.vue  ReportsPageView.vue  ResearchPageView.vue  ServicesPageView.vue  SettingsPageView.vue
retinadeepai-gateway/: .gitignore  Makefile  pyproject.toml
retinadeepai-gateway/accounts/: api.py  forms.py  models.py  urls.py
retinadeepai-gateway/accounts/migrations/: 0001_initial.py  0002_auto_create_user.py
retinadeepai-gateway/gateway/: settings.py  urls.py
retinadeepai-gateway/retina_analysis/: apps.py  models.py
retinadeepai-gateway/retina_analysis/fixtures/: retina_image_crop_types.json  retina_label_groups.json  retina_label_marks.json
retinadeepai-gateway/retina_analysis/migrations/: 0001_initial.py  0002_retinaimagecroptype_retinafileupload_and_more.py  0003_retinaanalysiscroptask_retinaanalysistask_and_more.py  0004_retinaanalysiscorrectresult_retinaanalysisresult.py
