[tool.poetry]
name = "retinadeepai-gateway"
version = "0.1.0"
description = ""
authors = ["leroy <leroy137.artur@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.6"
djangorestframework = "^3.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
